# fib_rs

./: Cargo.toml  README.md  setup.py
fib_rs/: __init__.py  fib_num_cli.py
src/: lib.rs
src/fib_calcs/: fib_num.rs  fib_nums.rs  mod.rs
