[package]
name = "fib_rs"
version = "0.1.0"
edition = "2021"
author = ["Jiajun Xie", "kifferob9@outlook.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.16.2"
features = ["extension-module"]

[lib]
name = "fib_rs"
crate-type = ["rlib", "cdylib"]

# [target.x86_64-apple-darwin]
# rustflags = [
#     "-C", "link-arg=-undefined",
#     "-C", "link-arg=dynamic_lookup"
# ]

# [target.aarch64-apple-darwin]
# rustflags = [
#     "-C", "link-arg=-undefined",
#     "-C", "link-arg=dynamic_lookup"
# ]
